fix: disable line wrapping on <li>

--- a/styles/atom-ide-outline.less
+++ b/styles/atom-ide-outline.less
@@ -34,6 +34,7 @@
       display: inline-block;
       width: 100%;
       padding: 2px 5px;
+      white-space: nowrap;
 
       // highlight on hover
       &:hover {
